# libnetwork

./: .clang-format  .gitignore  CMakeLists.txt  LibNetwork.sln  ReadMe.md  cmake-variants.json
LibNetwork/: LibNetwork.vcxproj  LibNetwork.vcxproj.filters
LibNetwork/includes/Network/: BinSerializer.h  Event.h  Server.h
LibNetwork/src/: Client.cpp  Server.cpp
SocketPenduServer/: BinSerializer.cpp  BinSerializer.h  Client.cpp  Client.h  Event.cpp  Event.h  Server.cpp  Server.h  Server.inl  Socket.cpp  Socket.h  SocketPenduServer.vcxproj  SocketPenduServer.vcxproj.filters  Types.h
SocketsPendu/: SocketsPendu.vcxproj  SocketsPendu.vcxproj.filters
cmake/: win_utils.cmake
includes/: Network.h  Utils.h
includes/Network/: BinSerializer.inl  Client.h  Client.inl  ClientV2.h  Event.h  Message.h  MsgSystem.h  Serializer.h  Serializer.inl  Server.h  Server.inl  ServerV2.h  Socket.h  SocketException.h
libnetwork/: CMakeLists.txt  LibNetwork.vcxproj  LibNetwork.vcxproj.filters  libnetworkConfig.cmake
libnetwork/include/: Exports.h  Network.h  Utils.h
libnetwork/include/Network/: Client.h  Event.h  Message.h  MsgSystem.h  Serializer.h  Serializer.inl  Server.h  Socket.h  SocketException.h
libnetwork/src/: Client.cpp  Event.cpp  Message.cpp  MsgSystem.cpp  Serializer.cpp  Server.cpp  Socket.cpp  SocketException.cpp
sample/PenduClient/: SocketsPendu.vcxproj  main.cpp  stdafx.cpp
sample/PenduServer/: SocketPenduServer.vcxproj  Types.h  main.cpp  stdafx.cpp
sample/Test_Client/: CMakeLists.txt  Test_Client.vcxproj  Test_Client.vcxproj.filters  main.cpp
sample/Test_Server/: CMakeLists.txt  Test_Server.vcxproj  Test_Server.vcxproj.filters  Types.h  main.cpp
src/: BinSerializer.cpp  Client.cpp  ClientV2.cpp  LibNetwork.vcxproj  LibNetwork.vcxproj.filters  Server.cpp  ServerV2.cpp  Socket.cpp  SocketException.cpp
